add install and uninstall ios app endpoints
